# riscv-sim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/sim/: cpu.cpp  cpu.hpp  operation.cpp  operation.hpp  regs.cpp  regs.hpp
tests/: test_simplified.sh
tests/env-s/: Makefile  riscv_test.h
